--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ sudo: required
 services:
     - docker
 
+# D is still in beta and we don't even use it's features, so we just pick
+# a lightweight environment
+language: c
+
 before_install:
     - docker build -t sociomantic-tsunami/ocean docker
 
