travis: Revamp docker handling and push to registry
A few assorted improvements to travis scripts. First split into separated
scripts the before_install and script commands. Then use the new
sociomantictsunami Docker Hub organization. Finally try to pull the image
from the registry, so we can use it as a cache, and try to push it back
if there are credentials available.

Also use $TRAVIS_REPO_SLUG to get the docker image name, so scripts are
more reusable.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ services:
 # a lightweight environment
 language: c
 
-before_install:
-    - docker build -t sociomantic-tsunami/ocean docker
+install:
+    - ./docker/travis-install.sh
 
 script:
-    - docker run -ti --rm -v $PWD:$PWD -w $PWD -u $(id -u) sociomantic-tsunami/ocean docker/travis.sh
+    - ./docker/travis-script.sh
