Use pre-build docker image for testing
Removes all in-place image generation and simplifies CI to just to scripts - one
with actual tests and one fetching and running docker image from repository.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,5 @@ services:
 # a lightweight environment
 language: c
 
-install:
-    - ci/travis-install.sh
-
 script:
-    - ci/travis-script.sh
+    - ci/docker-run.sh
