--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ sudo: required
 services:
     - docker
 
+env:
+    IMAGE=v1-trusty
+    IMAGE=v1-xenial
+
 # D is still in beta and we don't even use it's features, so we just pick
 # a lightweight environment
 language: c
