travis: Build matrix for F,DC,DIST combinations
This commit configures Travis to use matrix builds for all the
combinations of F={production,devel} (flavours),
DC={dmd1,dmd-transitional} (compiler, in the future upstream DMD could
be added as a "allow_failures" combination) and DIST={trusty,xenial}
(Ubuntu version).

For now the Dockerfile is sort of duplicated, but since it's minimal, it
shouldn't be a problem anyway.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,16 @@ sudo: required
 
 services: docker
 
+env:
+    - DC=dmd1 DIST=trusty F=production
+    - DC=dmd1 DIST=trusty F=devel
+    - DC=dmd1 DIST=xenial F=production
+    - DC=dmd1 DIST=xenial F=devel
+    - DC=dmd-transitional DIST=trusty F=production
+    - DC=dmd-transitional DIST=trusty F=devel
+    - DC=dmd-transitional DIST=xenial F=production
+    - DC=dmd-transitional DIST=xenial F=devel
+
 install: ci/travis-install.sh
 
 script: ci/travis-script.sh
