travis: Use "generic" language
This is an undocumented Travis feature, using "generic" as language
doesn't do any previous setup.

See https://github.com/travis-ci/travis-ci/issues/4895#issuecomment-150703192

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
+# Don't use any predefined language env
+# (see https://github.com/travis-ci/travis-ci/issues/4895#issuecomment-150703192)
+language: generic
+
 sudo: required
 
 services:
     - docker
-
-# D is still in beta and we don't even use it's features, so we just pick
-# a lightweight environment
-language: c
 
 install:
     - ci/travis-install.sh
