Run travis-after-success script only once
This script contains various actions to be done after tests succeeds -
it is wasteful or even wrong to run it for every matrix row.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services: docker
 env:
     - DC=dmd1 DIST=trusty F=production
     - DC=dmd1 DIST=trusty F=devel
-    - DC=dmd1 DIST=xenial F=production
+    - DC=dmd1 DIST=xenial F=production AFTER_SCRIPT=1
     - DC=dmd1 DIST=xenial F=devel
     - DC=dmd-transitional DIST=trusty F=production
     - DC=dmd-transitional DIST=trusty F=devel
