--- a/Dockerfile.trusty
+++ b/Dockerfile.trusty
@@ -1,3 +1,3 @@
-FROM sociomantictsunami/dlang:v1-trusty
-COPY docker/ /docker-tmp
-RUN /docker-tmp/build && rm -fr /docker-tmp
+FROM sociomantictsunami/dlang:trusty-v2
+COPY docker/build /
+RUN /build && rm /build
