--- a/Dockerfile.xenial
+++ b/Dockerfile.xenial
@@ -1,3 +1,3 @@
-FROM sociomantictsunami/dlang:v1-xenial
-COPY docker/ /docker-tmp
-RUN /docker-tmp/build && rm -fr /docker-tmp
+FROM sociomantictsunami/dlang:xenial-v2
+COPY docker/build /
+RUN /build && rm /build
