--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,14 @@ env:
         # Make sure beaver is in the PATH
         - PATH="$(git config -f .gitmodules submodule.beaver.path)/bin:$PATH"
     matrix:
-        - DMD=dmd1 DIST=trusty F=production
-        - DMD=dmd1 DIST=trusty F=devel
-        - DMD=dmd1 DIST=xenial F=production AFTER_SCRIPT=1
-        - DMD=dmd1 DIST=xenial F=devel
-        - DMD=dmd-transitional DIST=trusty F=production
-        - DMD=dmd-transitional DIST=trusty F=devel
-        - DMD=dmd-transitional DIST=xenial F=production
-        - DMD=dmd-transitional DIST=xenial F=devel
+        - DMD=1.080.0 DIST=trusty F=production
+        - DMD=1.080.0 DIST=trusty F=devel
+        - DMD=1.080.0 DIST=xenial F=production AFTER_SCRIPT=1
+        - DMD=1.080.0 DIST=xenial F=devel
+        - DMD=2.070.2.s12 DIST=trusty F=production
+        - DMD=2.070.2.s12 DIST=trusty F=devel
+        - DMD=2.070.2.s12 DIST=xenial F=production
+        - DMD=2.070.2.s12 DIST=xenial F=devel
 
 install: beaver dlang install
 
