travis: Use new version of beaver dlang install
See https://github.com/sociomantic-tsunami/beaver/pull/20 for details.

--- a/docker/build
+++ b/docker/build
@@ -1,10 +1,8 @@
 #!/bin/sh
-set -xe
+set -xeu
 
 # Install dependencies
-apt-get update
 apt-get install -y \
-    $DMD_PKG \
     libglib2.0-dev \
     libpcre3-dev \
     libxml2-dev \
