Split single after-success script into steps
Reduces the risk of accidentally sharing env vars between unrelated
steps and makes them more obvious when reading initial travis yml
script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,6 @@ install: beaver dlang install
 
 script: beaver dlang make
 
-after_success: ci/travis-after-success.sh
+after_success:
+    - test "$AFTER_SCRIPT" = "1" && beaver run ci/codecov.sh
+    - test "$AFTER_SCRIPT" = "1" && ci/d2tags.sh
