--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,6 @@ script: beaver dlang make
 
 after_success:
     - test "$AFTER_SCRIPT" = "1" && beaver run ci/codecov.sh
-    - test "$AFTER_SCRIPT" = "1" && ci/d2tags.sh
+    - test "$AFTER_SCRIPT" = "1" && \
+        BEAVER_DOCKER_VARS=\"OCEAN_D2_USER OCEAN_D2_PASS\" \
+        beaver run ci/d2tags.sh
