--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,6 @@ script: BEAVER_DOCKER_VARS=AFTER_SCRIPT beaver dlang make
 
 after_success:
     - test "$AFTER_SCRIPT" = "1" && beaver run ci/codecov.sh
-    - test "$AFTER_SCRIPT" = "1" && \
-        BEAVER_DOCKER_VARS=\"OCEAN_D2_USER OCEAN_D2_PASS\" \
+    - test "$AFTER_SCRIPT" = "1" &&
+        BEAVER_DOCKER_VARS="OCEAN_D2_USER OCEAN_D2_PASS"
         beaver run ci/d2tags.sh
