Don't use `AFTER_SCRIPT` for coverage report.
AFTER_SCRIPT should be used for running the post scripts in travis,
and coverage should be enabled for all matrix items, but not by default
on developer's machine.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
     global:
         # Make sure beaver is in the PATH
         - PATH="$(git config -f .gitmodules submodule.beaver.path)/bin:$PATH"
+        - COVERAGE_REPORT="1"
     matrix:
         - DMD=1.081.1 DIST=xenial F=production AFTER_SCRIPT=1
         - DMD=1.081.1 DIST=xenial F=devel
@@ -26,7 +27,7 @@ env:
 
 install: beaver dlang install
 
-script: BEAVER_DOCKER_VARS="AFTER_SCRIPT F" beaver dlang make
+script: BEAVER_DOCKER_VARS="AFTER_SCRIPT COVERAGE_REPORT F" beaver dlang make
 
 after_success:
     - beaver run ci/codecov.sh
