--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ env:
     matrix:
         - DMD=1.081.1 DIST=xenial F=production AFTER_SCRIPT=1
         - DMD=1.081.1 DIST=xenial F=devel
+        - DMD=1.081.1 DIST=xenial F=production DFLAGS=-release
         - DMD=2.070.2.s12 DIST=xenial F=production
         - DMD=2.070.2.s12 DIST=xenial F=devel
         - DMD=2.071.2.s1 DIST=xenial F=production
@@ -28,7 +29,7 @@ env:
 
 install: beaver dlang install
 
-script: BEAVER_DOCKER_VARS=AFTER_SCRIPT beaver dlang make
+script: BEAVER_DOCKER_VARS="AFTER_SCRIPT DFLAGS" beaver dlang make
 
 after_success:
     - test "$AFTER_SCRIPT" = "1" && beaver run ci/codecov.sh
