--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,13 @@ env:
         # Make sure beaver is in the PATH
         - PATH="$(git config -f .gitmodules submodule.beaver.path)/bin:$PATH"
     matrix:
-        - DMD=1.081.1 DIST=xenial F=production D2TAGS=1
-        - DMD=1.081.1 DIST=xenial F=devel
-        - DMD=1.081.1 DIST=xenial F=production DFLAGS=-release
-        - DMD=2.070.2.s12 DIST=xenial F=production
-        - DMD=2.070.2.s12 DIST=xenial F=devel
-        - DMD=2.071.2.s1 DIST=xenial F=production
-        - DMD=2.071.2.s1 DIST=xenial F=devel
+        - DMD=1.081.* DIST=xenial F=production D2TAGS=1
+        - DMD=1.081.* DIST=xenial F=devel
+        - DMD=1.081.* DIST=xenial F=production DFLAGS=-release
+        - DMD=2.070.2.s* DIST=xenial F=production
+        - DMD=2.070.2.s* DIST=xenial F=devel
+        - DMD=2.071.2.s* DIST=xenial F=production
+        - DMD=2.071.2.s* DIST=xenial F=devel
 
 install: beaver dlang install
 
