--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ if: NOT tag =~ \+d2$
 
 install: beaver dlang install
 
-script: beaver dlang make
+script: BEAVER_DOCKER_VARS="CI" beaver dlang make
 
 after_success: beaver dlang codecov
 
