Make codecov checks much less demanding

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,18 +1,12 @@
-coverage:
-    status:
-        # Make all cov less fatal initially
-        project:
-            default:
-                if_no_uploads: success
-                if_not_found: success
-        patch:
-            default:
-                if_no_uploads: success
-                if_not_found: success
-        changes:
-            default:
-                if_no_uploads: success
-                if_not_found: success
-
 comment:
     layout: "diff"
+
+coverage:
+    status:
+        project: false
+        changes: false
+        patch:
+            default:
+                enabled: true
+                target: 80%
+                threshold: 50%
