Use Makd COV option to get coverage
With this, even integration tests should get coverage reports.

* submodules/beaver v0.3.1(7687611)...v0.4.0(61aebb1) (10 commits)
  > dlang/make: Rely on MakD to properly merge cov reports
  > dlang/codecov: Improve detection of lack of reports
  > dlang/codecov: Remove wrong change of directory
  > Add a new general-purpose codecov command
  > beaver: Fail if the requested command doesn't exist
  (...)

* submodules/makd v2.1.1(271b317)...v2.2.0(4209a06) (7 commits)
  > Adapt release notes to new format
  > Add coverage support
  > Add support for specifying a custom package iteration
  > Merge tag v2.1.3 into v2.x.x v2.1.3
  > Merge tag v2.1.2 into v2.x.x v2.1.2
  (...)

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ env:
         # Make sure beaver is in the PATH
         - PATH="$(git config -f .gitmodules submodule.beaver.path)/bin:$PATH"
         - DIST=xenial
+        - COV=1
     matrix:
         - DMD=1.081.* F=production
         - DMD=1.081.* F=devel
