Pipe -debug build logs to /dev/null
It hits output length limit in Travis and we only care that it still
compiles.

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ jobs:
           env: DMD=1.081.* F=production DFLAGS=-release
         - <<: *test-matrix
           env: DMD=1.081.* F=production DFLAGS=-debug=ISelectClient
+          script: 2>/dev/null beaver dlang make
         - <<: *test-matrix
           env: DMD=1.081.* F=devel
         - <<: *test-matrix
