Add support for Ubuntu bionic
Set libssl and libcryto to version 1.0.0 supported in Ubuntu xenial and bionic.
The specific version will have to be removed once the support for xenial is
dropped and the bindings to libssl have been updated to v1.1.x which is
supported by default in bionic.

The dmd-transitional compiler is available for Ubuntu bionic only in
vesion 2.078.3.s*.

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,17 @@ jobs:
           env: DMD=2.085.* F=production
         - <<: *test-matrix-d2
           env: DMD=2.085.* F=devel
+        - <<: *test-matrix-d2
+          env: DIST=bionic DMD=2.078.3.s* F=production
+        - <<: *test-matrix-d2
+          env: DIST=bionic DMD=2.078.3.s* F=devel
+        - <<: *test-matrix-d2
+          env: DIST=bionic DMD=2.078.3.s* F=devel DFLAGS=-debug=ISelectClient
+          script: 2>/dev/null beaver dlang make
+        - <<: *test-matrix-d2
+          env: DIST=bionic DMD=2.085.* F=production
+        - <<: *test-matrix-d2
+          env: DIST=bionic DMD=2.085.* F=devel
 
         # Additional stages
 
