Use Deimos OpenSSL instead of our own bindings
Remove a bit of duplication and allow users depending on this library
to use a more familiar way to configure the version of OpenSSL they
are using.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "makd"]
 	path = submodules/makd
 	url = https://github.com/sociomantic-tsunami/makd.git
+[submodule "openssl"]
+	path = submodules/openssl
+	url = https://github.com/D-Programming-Deimos/openssl.git
